--- a/index.html
+++ b/index.html
@@ -1,13 +1,62 @@
 <!doctype html>
-<html>
+<html lang="fr">
 
 <head>
     <meta charset="utf-8">
-    <title>Calculatrice</title>
+    <meta name="viewport" content="initial-scale=1.0" />
+    <title>Portfolio</title>
+    <link rel="stylesheet" href="./css/reset.css"/>
+    <link rel="stylesheet" href="./css/font-awesome.css"/>
+    <link rel="stylesheet" href="./css/style.css"/>
 </head>
 
 <body>
-    <p> TEST </p>
-</body>
+    <header class="wrapper"> 
+        <div class="person right">
+            <h1 class="left">Charlotte Fries</h1>
+            <h2 class="left">Graphiste Niveau 2</h2>
+            <i class="fa fa-paint-brush right" aria-hidden="true"></i>
 
+        </div>
+
+        <nav class="menu1">
+            <ul>
+                <li><div id="moncercle"><i class="fa fa-paint-brush" aria-hidden="true"></i></div></li>
+                <li><div id="moncercle"><i class="fa fa-code" aria-hidden="true"></i> </div></li>
+                <li><div id="moncercle"><i class="fa fa-picture-o" aria-hidden="true"></i> </div></li>
+                <li><div id="moncercle"><i class="fa fa-user" aria-hidden="true"></i> </div></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main class="wrapper">
+        <section>
+            <ul>
+                <li><div class="logo left"></div><div class="elmt">HTML5</div></li>
+                <li><div class="logo left"></div><div class="elmt">CSS3</div></li>
+                <li><div class="logo left"></div><div class="elmt">PHP</div></li>
+                <li><div class="logo left"></div><div class="elmt">MySQL</div></li>
+                <li><div class="logo left"></div><div class="elmt">Python</div></li>
+                <li><div class="logo left"></div><div class="elmt">Shell</div></li>
+            </ul>
+        </section>
+        
+        <section>
+            <article>
+               <h1>CONTACTS</h1>
+               <br/>
+                <ul>
+                    <li><i class="fa fa-envelope" aria-hidden="true"></i> charlotte.lethae@gmail.com</li>
+                    <li><i class="fa fa-mobile" aria-hidden="true"></i> 06 06 84 69 01</li>
+                    <li><i class="fa fa-map-marker" aria-hidden="true"></i>HAGUENAU Bas-Rhin</li>
+                </ul>
+            </article>
+        </section>
+        <aside class="right">
+             <img src="images/Lethae.jpg" alt="mon avatar"> 
+        </aside>
+    </main>
+
+
+</body>
 </html>
