--- a/index.html
+++ b/index.html
@@ -72,6 +72,18 @@
             <h1>Détails</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil inventore pariatur aut alias quam, delectus impedit laborum nam molestiae magni fuga repudiandae dolores quo fugit qui nostrum a in, laudantium!</p>
         </article>
+        
+        <div id="portfolio">
+            <div class="line1 col1"></div>
+            <div class="line1 col2"></div>
+            <div class="line1 col3"></div>
+            <div class="line2 col1"></div>
+            <div class="line2 col2"></div>
+            <div class="line2 col3"></div>
+            <div class="line3 col1"></div>
+            <div class="line3 col2"></div>
+            <div class="line3 col3"></div>
+        </div>
 
     </div>
     
