--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
            <hr>
            
             <section>
-                <article>
+                <article class="contact">
                    <h1>CONTACTS</h1>
                    <br/>
                     <ul>
