--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                    <br/>
                     <ul>
                         <li>
-                            <i class="fa fa-envelope" aria-hidden="true"></i> charlotte.lethae@gmail.com
+                            <i class="fa fa-envelope" aria-hidden="true"></i> <a href="mailto:charlotte.lethae@gmail.com">charlotte.lethae@gmail.com</a>
                         </li>
                         <li>
                             <i class="fa fa-mobile" aria-hidden="true"></i> 06 06 84 69 01
@@ -156,7 +156,9 @@
 
         <div class="person right">
             <div id="graphicon">
-                <i class="fa fa-paint-brush" aria-hidden="true"></i>
+                <i class="fa fa-gamepad" aria-hidden="true"></i>
+                <i class="fa fa-music" aria-hidden="true"></i>
+                <i class="fa fa-pencil" aria-hidden="true"></i>
             </div>
             <h1 class="left">Charlotte Fries</h1>
             <h2 class="left">Graphiste</h2>
@@ -171,14 +173,14 @@
             <article id="details">
                 <h1>A propos</h1>
                 <ol>
-                    <li>Petite humaine armée d'un crayon et d'une souris qui aime créer des univers</li>
+                    <li>Petite humaine armée d'un crayon et d'une souris qui aime créer des univers.</li>
                     <br/>
                     <i class='fa fa-graduation-cap' aria-hidden='true'></i>
-                    <li class="study">A étudié à l'IUT de Haguenau pour obtenir son DUT MMI après un bac S</li> 
-                    <i class='fa fa-globe' aria-hidden='true'></i>
-                    <li class="study">Parle, écrit et comprend l'Anglais et l'Allemand.</li>
+                    <li class="study">A étudié à l'IUT de Haguenau pour obtenir son DUT MMI après un bac S</li>
                     <i class="fa fa-car" aria-hidden="true"></i>
-                    <li class="study">Possède le permis B et une voiture ainsi qu'une tablette graphique</li> 
+                    <li class="study">Possède le permis B et une voiture ainsi qu'une tablette graphique</li>  
+                    <i class='fa fa-globe' aria-hidden='true'></i>
+                    <li class="study"> Anglais et Allemand lu, parlé et écrit</li>
                 </ol>
             </article>
         
