--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                             HAGUENAU Bas-Rhin
                         </li>
                         <li>
-                            <a href='images/CVgraph%20Ankama.pdf' target="_blank"><i class="fa fa-download" aria-hidden="true"></i> Télécharger mon cv</a>
+                            <a href='images/FRIES_CV.pdf' target="_blank"><i class="fa fa-download" aria-hidden="true"></i> Télécharger mon cv</a>
                         </li>
                         <li class="reseau right">
                             <a href="https://twitter.com/FriesLethae">
