Last FINAL CHANGE
Vraiment dernier changement. Need some sleep...

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                     <i class='fa fa-graduation-cap' aria-hidden='true'></i>
                     <li class="study">A étudié à l'IUT de Haguenau pour obtenir son DUT MMI après un bac S</li>
                     <i class="fa fa-car" aria-hidden="true"></i>
-                    <li class="study">Possède le permis B et une voiture ainsi qu'une tablette graphique</li>  
+                    <li class="study">Possède le permis B ainsi qu'une voiture</li>  
                     <i class='fa fa-globe' aria-hidden='true'></i>
                     <li class="study"> Anglais et Allemand lu, parlé et écrit</li>
                 </ol>
